Add in TLS for TAP-GUI

--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-build-run/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-build-run/tap-role.yaml
@@ -38,6 +38,10 @@ stringData:
             service:
               annotations:
                 external-dns.alpha.kubernetes.io/hostname: '*.build-run.aws-work.grogscave.net'
+        tap_gui:
+          tls:
+            namespace: default
+            secretName: default-cert
 ---
 apiVersion: packaging.carvel.dev/v1alpha1
 kind: PackageInstall
