Add gitHub auth

--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-build-run/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-build-run/tap-role.yaml
@@ -42,6 +42,10 @@ stringData:
           tls:
             namespace: default
             secretName: default-cert
+          metadataStoreAutoconfiguration: true
+            app_config:
+              auth:
+                environment: default
 ---
 apiVersion: packaging.carvel.dev/v1alpha1
 kind: PackageInstall
