--- a/clusters/eks.cdd-gloudgate.us-east-2.tola/tanzunet-registry-credentials.sops.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.tola/tanzunet-registry-credentials.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: ENC[AES256_GCM,data:T1+fQ8f/1zqEoDOkXaHbnYWB5/c=,iv:afF0Bi/UuAjNtgzAeuKwWTpZkOjWI/EX/KcmOyDtRgM=,tag:c3qpCK39OHOs4ukkWZmrPQ==,type:str]
     namespace: ENC[AES256_GCM,data:NKu7bdXPeKqnvOCw6p/dV5Lyzt3SJ+dftV8MH3GdYS8PUg==,iv:iIFc72NhJJXLTt5Qe2jjze9sA4OiC9uHsk9k7+A2ICg=,tag:324TELobhVZyWUhx6i9H9Q==,type:str]
 type: ENC[AES256_GCM,data:oVNI+vyd8fNIhJD2gTlyKvVFX8/2+vwYWswDvuxE,iv:127KqmNaQsMIHpu5zVbDDdSnqQZUoujs45GCx+Iiq68=,tag:U3TWYtpaPdM62zSGIdcHAg==,type:str]
-data:
-    .dockerconfigjson: ENC[AES256_GCM,data:i97veJI+bVnTEkk467RKVzKmo/KYWim4M7PAJsg7gn/gP3zoGKaA3XHfk+okExwQexWwzQ5gS5hT3olvbTcVSo9m0IxrpzNdftKSts81WyOXdnwtZ7/1eQkae0ZRoIJNPmZX3gPUn28m7O+A2guyQAmAmrZqYtAOpxlBhy0/f2ma4mdg,iv:ihRHNLRs2qA98ENzydW9p7edrUhQQsnCiDZnFCKDNoU=,tag:outMaWwDoLfEljPfI5G8EA==,type:str]
+stringData:
+    .dockerconfigjson: ENC[AES256_GCM,data:ICEleXnc8wE+dxKdv/tK0NWLccZ/y+PsXkCxPK05TQwIhk40o90sPbtfTuT5fMGFGexci2I6rRtVKlqSaHyJGws9CFwaoXA1TOzpkH+uyGfe+3Hx0IH4sOwPvaA0snL4NWT7CPjCh8ET4OraCgSF4Ri5NWappIyKZuZgp0YHwT7h9Gi6,iv:PDI5SfAUZ3ZLmGPvEH+EjZlXKgn3tko9YVTVuWAJkWU=,tag:+3FspjsmwyV/UDN24ES8hA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             YjhTZ1d4cEs1bi9tRWpJbnI4Z0VBRUUK2Rh7oLOXxUNmzmiVkpUs0I36b6RmSVhk
             zHxnlJQalqQze/W9tNMSgySc+bAQaEZghTJ9cGu2z68iBmpbWvdPYw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-14T17:15:29Z"
-    mac: ENC[AES256_GCM,data:OCdvC52NaItzxI1s5JjPOq2DqnkfUKVnxfjrn7l5xZomrFVDkzTT2raBn/+s6MTgBaywwF7kktMLD/8aubjBgTHrAygC0JMBaQevFpQYp9oVySIEPwH+J7I5ClAl7F1SNjXy1u2EwOb9mbfoFRI8QCU13KLxQxCWcVOQDaG0390=,iv:HYD64KAmsegqHHviN21MWqi1pd/Qglpl1SqtGBSWrDY=,tag:R+cMZgroZJT/aYw8W7SfCw==,type:str]
+    lastmodified: "2023-12-14T17:21:56Z"
+    mac: ENC[AES256_GCM,data:LB/NBNTfbTIIOKexOqr4xKq2rKj9H7CellHrwISrv5dDzfrxK+s2St9uU6ZTYTjqZoEuPVCkldJ/u+y/8cMCakpWHA/C+YIkx3gBNxVOmjF8zVoz+7PMIxhnt4Q+krWTWh+BvtKQjji7PZ8v8leQPZvaa7QPejGmQ21KKDjA/iE=,iv:qEQT8v+B3OPvoENAVgkrHx0LVM76N9vfDVj0vEaleHI=,tag:FeM/4gYOVEK+P5t0FNP2rQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
@@ -50,8 +50,8 @@ sops:
             YjhTZ1d4cEs1bi9tRWpJbnI4Z0VBRUUK2Rh7oLOXxUNmzmiVkpUs0I36b6RmSVhk
             zHxnlJQalqQze/W9tNMSgySc+bAQaEZghTJ9cGu2z68iBmpbWvdPYw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-14T17:15:29Z"
-    mac: ENC[AES256_GCM,data:OCdvC52NaItzxI1s5JjPOq2DqnkfUKVnxfjrn7l5xZomrFVDkzTT2raBn/+s6MTgBaywwF7kktMLD/8aubjBgTHrAygC0JMBaQevFpQYp9oVySIEPwH+J7I5ClAl7F1SNjXy1u2EwOb9mbfoFRI8QCU13KLxQxCWcVOQDaG0390=,iv:HYD64KAmsegqHHviN21MWqi1pd/Qglpl1SqtGBSWrDY=,tag:R+cMZgroZJT/aYw8W7SfCw==,type:str]
+    lastmodified: "2023-12-14T17:21:56Z"
+    mac: ENC[AES256_GCM,data:LB/NBNTfbTIIOKexOqr4xKq2rKj9H7CellHrwISrv5dDzfrxK+s2St9uU6ZTYTjqZoEuPVCkldJ/u+y/8cMCakpWHA/C+YIkx3gBNxVOmjF8zVoz+7PMIxhnt4Q+krWTWh+BvtKQjji7PZ8v8leQPZvaa7QPejGmQ21KKDjA/iE=,iv:qEQT8v+B3OPvoENAVgkrHx0LVM76N9vfDVj0vEaleHI=,tag:FeM/4gYOVEK+P5t0FNP2rQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
