Add in TDP Supply chain

--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-build-run/tdp-workload.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-build-run/tdp-workload.yaml
@@ -4,9 +4,7 @@ metadata:
   name: tdp-configurator
   namespace: tdp
   labels:
-    apps.tanzu.vmware.com/workload-type: web
-    apps.tanzu.vmware.com/has-tests: "true"
-    app.kubernetes.io/part-of: tdp-configurator
+    apps.tanzu.vmware.com/workload-type: tdp
   annotations:
     kapp.k14s.io/change-rule.0: "upsert after upserting tap"
     kapp.k14s.io/change-rule.1: "delete before deleting tap"
