--- a/packages/tap/config/tdp-app-image-overlay.yaml
+++ b/packages/tap/config/tdp-app-image-overlay.yaml
@@ -8,6 +8,7 @@ metadata:
   namespace: tap-install
 type: Opaque
 stringData:
+  #@yaml/text-templated-strings
   tdp-app-image-overlay.yaml: |
     #@ load("@ytt:overlay", "overlay")
 
